--- a/vxd/Languages/Tasx/Tasx.xml
+++ b/vxd/Languages/Tasx/Tasx.xml
@@ -29,7 +29,7 @@
 <Icon Name="Address" Image="Languages/Tasx/Images/Address.jpg"/>
 <Icon Name="Car" Image="Languages/Tasx/Images/Car.jpg"/>
 <Icon Name="Bus" Image="Languages/Tasx/Images/Bus.jpg"/>
-<Icon Name="Mail" Image="Languages/Tasx/Images/Mail.gif"/>
+<Icon Name="Mail" Image="Languages/Tasx/Images/Mail.jpg"/>
 <Icon Name="Payroll" Image="Languages/Tasx/Images/Payroll.gif"/>
 <Icon Name="Finance" Image="Languages/Tasx/Images/Finance.gif"/>
 <Icon Name="AP" Image="Languages/Tasx/Images/AP.gif"/>
