--- a/vxd/Languages/Tasx/Language.dtd
+++ b/vxd/Languages/Tasx/Language.dtd
@@ -9,7 +9,7 @@
 <!ELEMENT Connector (#PCDATA)>
 <!ATTLIST Connector Name CDATA #IMPLIED
                     Image CDATA #IMPLIED
-                    Type (AGGREGATION|CONNECTION) "CONNECTION">
+                    Type (AGGREGATION|CONNECTION|REPARENT) "CONNECTION">
 <!ELEMENT Editors (Editor)*>
 <!ELEMENT Editor (#PCDATA)>
 <!ATTLIST Editor Name CDATA #REQUIRED
