--- a/vxd/Languages/Tasx/Tasx.xml
+++ b/vxd/Languages/Tasx/Tasx.xml
@@ -8,7 +8,7 @@
         <Icon Name="Commit" Image="Languages/Tasx/Images/Commit.jpg"/>
         <Icon Name="CustomerService" Image="Languages/Tasx/Images/CustomerService.jpg"/>
         <Icon Name="Delivery" Image="Languages/Tasx/Images/Delivery.jpg"/>
-        <Icon Name="Deal" Image="Languages/Tasx/Images/Deal.jpg"/>
+        <Icon Name="Deal" Image="Languages/Tasx/Images/Deal.png"/>
         <Icon Name="Management" Image="Languages/Tasx/Images/Management.jpg"/>
         <Icon Name="Manufacturing" Image="Languages/Tasx/Images/Manufacturing.jpg"/>
         <Icon Name="Marketing" Image="Languages/Tasx/Images/Marketing.jpg"/>
